// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation should navigate to queriesList 1`] = `
<main>
  <ul
    class="query-list"
  />
</main>
`;

exports[`navigation should navigate to the list of the reddit search queries's posts 1`] = `
Array [
  Array [
    "postList",
    Object {
      "href": "https://reddit.com/search?q=user_query&sort=new",
      "name": "Query name",
    },
  ],
]
`;

exports[`navigation should navigate to the list of the subreddit search queries's posts 1`] = `
Array [
  Array [
    "postList",
    Object {
      "href": "https://reddit.com/r/javascript/search?q=react&sort=new&restrict_sr=on",
      "name": "react in r/javascript",
    },
  ],
]
`;

exports[`navigation should navigate to the list of the subreddit search queries's posts 2`] = `
<main>
  <ul
    class="post-list"
  />
</main>
`;
